Fri Dec 24 22:39:48 2004  Tim Janik  <timj@gtk.org>

	* bsecontainer.c (bse_container_remove_backedup): force project 
	deactivation for choldren with automation properties, because
	automation properties can't be setup on prepared objects.

	* bseproject.[hcp]*: export undo-stack deactivation function
	bse_project_push_undo_silent_deactivate(), so other code portions
	can force project deactivation for specific undo steps.

	* bsecxxplugin.h: export *_choice_values() getter when declaring
	enumeration types.

	* bseplugin.c: provide choice value getter for exported enum types.
	register enum transform functions for dynamic enum types (allowed
	since glib-2.4).

	* bseenginemaster.c: first discard the engine schedule, then 
	modify the master node list, so the old schedule doesn't point
	at dangling nodes.

	* bsemath.[hc]: added bse_float_gnuplot() to ease debugging.

	* bseexports.h: added *_choice_values() getter function to
	BseExportNodeEnum.

	* bsemathsignal.[hc]: documentation updates.

Fri Dec 24 15:26:58 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* gslloader-pat.cc: Added initial implementation of a GSL loader for
	GUS patches (like those usually used in timidity patch sets).

Mon Dec 20 19:51:07 2004  Tim Janik  <timj@gtk.org>

	* bsemathsignal.h: removed bse_approx_exp2() and bse_signal_exp2().
	added bse_approx2_exp2() .. bse_approx9_exp2() functions to approximate
	2^x with varying precision and speed.
	added bse_approx2_tanh() .. bse_approx9_tanh() functions to approximate
	tanh(x) with varying precision and speed.
	added bse_saturate_hard() and bse_saturate_branching() to implement
	fast CLAMP()-ing.

Sun Dec 19 13:44:43 2004  Tim Janik  <timj@gtk.org>

	* bseparam.[hc]: added minimum and maximum parameters to 
	bse_param_spec_freq().

	* bsetype.h: turned Frequency() parameters into logarithmic properties.

Sat Dec 18 23:58:04 2004  Tim Janik  <timj@gtk.org>

	* bseconstvalues.h: constant cleanups, removed _f and _d postfixes and